# sf-snapcode

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/snapcode/: cli.py
tests/: test_cli.py
