[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sf-snapcode"
version = "0.2.0"
description = "Create and maintain snapshots of your codebase"
authors = [
    { name="sundeep yedida", email="sundeep.yedida@stitchfix.com" }
]
readme = "README.md"
requires-python = ">=3.9.10"
dependencies = ["watchdog>=3.0.0"]

[project.scripts]
snapcode = "snapcode.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/snapcode"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=snapcode --cov-report=term-missing" 
